<resources>
    <string name="app_name">SisdoApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Preferencias -->
    <string name="preferencias">Preferencias</string>


    <!-- Login -->
    <string name="login">Login</string>
    <string name="nome">Nome/Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticacao">Erro ao logar</string>
    <string name="manter_conectado">Manter Conectado</string>
    <string name="cadastro">Cadastrar</string>
    <string name="cadastrar">Cadastrar</string>

    <!-- Novo Usuario -->
    <string name="nomeUsuario">Nome</string>
    <string name="emailUsuario">Email</string>
    <string name="confirmaSenha">Confirma Senha</string>

    <!-- Inicio -->




    <string name="buscar">Buscar</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_cadastro_usuario">CadastroUsuarioActivity</string>


</resources>
