<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_vertical"
android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo"
        android:layout_weight="0.17" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nome" />

<EditText
    android:id="@+id/usuario"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text" >
    <requestFocus />
</EditText>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/senha" />

<EditText
    android:id="@+id/senha"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword" />

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:onClick="login"
    android:text="@string/entrar" />

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:onClick="cadastrarUsuario"
    android:text="@string/cadastrar" />


<CheckBox
    android:id="@+id/manterConectado"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/manter_conectado" />
</LinearLayout>